--- a/css/desktop.css
+++ b/css/desktop.css
@@ -1,15 +1,32 @@
 
+@media(min-width: calc(960px + 300px * 2)) {
 
-.outline {
-    width: 300px;
-    margin-top: 120px;
+    .vertical-toc {
+        display: none;
+    }
+
+    .outline {
+        width: 300px;
+        margin-top: 120px;
+        margin-left: -300px;
+        float: left;
+        height: 100%;
+    }
+
+    .outline nav {
+        position: sticky;
+        top: 120px;
+    }
+
+    .outline nav a.active {
+        transform: translateX(-1em) ;
+        font-weight: 600;
+    }
+    
 }
 
-.outline nav {
-    position:sticky;
-    height: auto;
-
-    top: 120px;
+.mobile-only {
+    display: none;
 }
 
 .container {
